--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.72.6",
     "expo-location": "~16.1.0",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "@types/react": "~18.2.14",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
