--- a/app.json
+++ b/app.json
@@ -13,6 +13,17 @@
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ]
-    ]
+    ],
+    "android": {
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.FOREGROUND_SERVICE"
+      ],
+      "package": "com.yoco.compass"
+    },
+    "ios": {
+      "bundleIdentifier": "com.yoco.compass"
+    }
   }
 }
