--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "expo-location": "~16.1.0",
     "typescript": "^5.1.3",
     "@types/react": "~18.2.14",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
