--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
-    "expo-system-ui": "~2.4.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "sharp-cli": "^4.2.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
